# mentor-mentee

./: README.md  pyproject.toml
docs/: flow.md
mentor_mentee/: api.py  hooks.py  modules.txt  todo_permission_query.py
mentor_mentee/fixtures/: client_script.json  server_script.json
mentor_mentee/public/: index.html
mentor_mentee/public/js/: mentor_mentee.js
mentor_mentee/web_page/mentor_mentee/: mentor_mentee.html  mentor_mentee.py
mentor_mentee/www/: hod_todo.html  hod_todo.py  instructor_todo.html  instructor_todo.py  mentor-mentee.html  mentor_mentee.html  mentor_mentee.py  todo.html  todo.py  users11.html  users11.py
mentor_mentee/www/pagination_list/: index.html  pagination.css  pagination.js  pagination.py
